# SIRS-Project

./: .git-blame-ignore-revs  .gitignore  LICENSE  README.md  Report.md  docker-compose.yml  flake.nix  key-gen.sh  packages.nix  pyproject.toml
infra/: hosts.nix  networking.sh  start_vm.sh  topology.nix  use_mechanic.sh  use_user.sh
infra/modules/: motorist-server.nix  postgresql.nix  ssh-server.nix
key_store/: bootstrap.sh  ca.crt  gen_car_key.sh  gen_entity.sh  gen_user.sh  init_ca.sh  manufacturer.crt
server/: manage.py
server/motorist/: asgi.py  settings.py  wsgi.py
src/: pyproject.toml
src/car/: README.md  default_config.json  docker-compose.yml  main.py
src/car/data/: init.sql
src/common/: main.py
src/cryptolib/: README.md  main.py  setup.py
src/manufacturer/: README.md  docker-compose.yml  main.py
src/manufacturer/data/: init copy.sql  init.sql
src/mechanic/: README.md  main.py  mechanic_signature.txt  styles.css
src/server/: manage.py
src/server/motorist/: asgi.py  settings.py  urls.py  wsgi.py
src/user/: app.py  styles.css  styles.tcss
test/: README.md  cryptolib_test.sh  default_config.json  input.json  key-gen.sh  verify_signature_test.py  verify_singature_test.py
