[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "motorist"
version = "0.0.1"
dependencies = [
    "requests",
    "rich",
    "cryptography",
    "click",
    'importlib-metadata; python_version<"3.10"',
    'flask',
    'textual',
    'psycopg',
    'psycopg-binary',
    'psycopg-pool',
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]  # alternatively: `exclude = ["additional*"]`
namespaces = false
