[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "motorist"
version = "0.0.1"
dependencies = [
    "requests",
    "rich",
    "cryptography",
    "click",
    'importlib-metadata; python_version<"3.10"',
    'flask',
    'textual',
    'psycopg',
    'psycopg-binary',
    'psycopg-pool',
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]  # alternatively: `exclude = ["additional*"]`
namespaces = false

[tool.ruff.lint.per-file-ignores]
# Ignore `F403` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
"__init__.py" = ["F403"]

