[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "motorist"
version = "0.0.1"
dependencies = [
    # Dependencies are specified in flake.nix (look for `pythonDeps`)
    'importlib-metadata; python_version<"3.10"',
]

[project.scripts]
# my-client = "my_package.my_module:main_cli"
cryptolib = "cryptolib:cli"
mechanic = "mechanic:tui"
user = "user:tui"
manufacturer = "manufacturer:start"
car = "car:start"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]  # alternatively: `exclude = ["additional*"]`
namespaces = false

[tool.ruff.lint.per-file-ignores]
# Ignore `F403` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
"__init__.py" = ["F403"]

