[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "motorist"
version = "0.0.1"
dependencies = [
    "requests",
    "rich",
    'importlib-metadata; python_version<"3.10"'
]

[tool.setuptools.packages.find]
where = ["./"]
include = ["*"]  # alternatively: `exclude = ["additional*"]`
namespaces = false